Random table generator

--- a/src/content/posts/articles/core-d20-rpg-enhanced-shields.mdx
+++ b/src/content/posts/articles/core-d20-rpg-enhanced-shields.mdx
@@ -13,7 +13,7 @@ tags:
 
 Эта статья посвящена правилам по щитам в рамках нашего проекта Core d20 RPG.
 
-#### Легкие щиты
+#### Лёгкие щиты
 
 | Название      | Цена, зм | Класс Защиты, КЗ | Сила | Вес, фунтов | Свойства    |
 | ------------- | -------- | ---------------- | ---- | ----------- | ----------- |
@@ -27,12 +27,14 @@ tags:
 | Кавалерийский щит | 10       | 2                | -    | 6           | Верховая защита |
 | Пехотный щит      | 10       | 2                | 11   | 8           | Стена щитов     |
 
-#### Тяжелые щиты
+#### Тяжёлые щиты
 
 | Название     | Цена, зм | Класс Защиты, КЗ | Сила | Вес, фунтов | Свойства                |
 | ------------ | -------- | ---------------- | ---- | ----------- | ----------------------- |
 | Павиза       | 20       | 3                | 13   | 15          | Громоздкий, Размещаемый |
 | Башенный щит | 20       | 3                | 15   | 22          | Громоздкий, Стена щитов |
+
+<Generator id="enhanced-shields" />
 
 Для использования щита из определенной категории необходимо иметь навык владения доспехом соответствующей категории (т.е. тяжелые доспехи для башенного щита).
 
