--- a/src/content/posts/articles/cored-20-rpg-feats-1.mdx
+++ b/src/content/posts/articles/cored-20-rpg-feats-1.mdx
@@ -3,10 +3,10 @@ title: '[Core d20 RPG] Черты, часть 1'
 description: 'Две черты для Core d20 RPG - Написание свитков и Лучник заклинатель'
 date: 2023-05-15
 tags:
-- 'Core d20 RPG'
-- 'E5E'
-- 'Черты'
-- 'homebrew'
+    - Core d20 RPG
+    - E5E
+    - Черты
+    - Homebrew
 ---
 
 ## Черты, связанные с сотворением заклинаний
