--- a/src/content/posts/articles/martial-traditions.mdx
+++ b/src/content/posts/articles/martial-traditions.mdx
@@ -1,5 +1,5 @@
 ---
-title: '[Core d20 RPG] Черты для щкол боевых искусств с использованием боевых приемов и техник'
+title: '[Core d20 RPG] Черты для школ боевых искусств с использованием боевых приемов и техник'
 description: Перевод моего англоязычного материала про черты для воинских классов, которые эмулируют изучение определенных способов сражаться - с типичным оружием и приемами.
 date: 05-14-2023
 tags:
