--- a/src/content/posts/articles/core-d20-rpg-spells-1.mdx
+++ b/src/content/posts/articles/core-d20-rpg-spells-1.mdx
@@ -1,98 +1,193 @@
 ---
+
 title: '[Core d20 RPG] Заклинания, часть 1'
+
 description: 'Новые заклинания для пятой редакции, часть 1'
+
 date: 2023-05-16
+
 tags:
+
 - 'Homebrew'
+
 - 'Core d20 RPG'
+
 - 'Заклинания'
+
 ---
 
 ### Молитва
+
 3-й круг призыва
-Время сотворения: 1 бонусное действие
-Дистанция: 30 футов
-Компоненты: четки В, С
-Длительность: Концентрация, до 1 минуты
+
+**Время сотворения:**  1 бонусное действие
+
+**Дистанция:** 30 футов
+
+**Компоненты:** четки В, С
+
+**Длительность:** Концентрация, до 1 минуты
+
 Выберите любое количество существ в пределах досягаемости. Пока заклинание не закончилось, каждая цель получает благословение богов, проявляющееся в бонусе +1 к КЗ, броскам атаки, броскам урона от оружия, проверкам характеристик и спасброскам. 
+
 ### Призыв заграждения [Conjure barrage]
+
 3-й круг призыва
-Время сотворения:1 действие
-Дистанция: на себя
-Компоненты: В, С, М (один боеприпас или метательное оружие)
-Длительность: Мгновенно
+
+**Время сотворения:** 1 действие
+
+**Дистанция:** на себя
+
+**Компоненты:** В, С, М (один боеприпас или метательное оружие)
+
+**Длительность:** Мгновенно
+
 Вы бросаете оружие или стреляете в воздух, чтобы создать конус из одинакового оружия, которое обрушивается на ваших врагов. Каждое существо в 60-футовом конусе должно преуспеть в спасброске Ловкости или получить 4к8 урона (половину урона при успехе). Тип урона соответствует оружию или боеприпасу, используемых в качестве компонента.
-Используя более высокий круг. Когда вы сотворяете это заклинание, используя ячейку заклинаний 4-го уровня или выше, урон увеличивается на 2к8 за каждый уровень после 3-го.
+
+***Используя более высокий круг.*** Когда вы сотворяете это заклинание, используя ячейку заклинаний 4-го уровня или выше, урон увеличивается на 2к8 за каждый уровень после 3-го.
+
 ###  Магическое оружие
+
 2-й круг трансмутации
-Время сотворения:1 действие 
-Дальность: Касание
-Компоненты: В, С 
-Длительность: 2 часа
+
+**Время сотворения:** 1 действие 
+
+**Дистанция:** Касание
+
+**Компоненты:** В, С 
+
+**Длительность:** 2 часа
+
 Коснитесь немагического оружия. Пока заклинание не закончилось, это оружие становится магическим оружием с бонусом +1 к броскам атаки и броскам урона.
-Используя более высокий круг. Если вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга или выше, бонус увеличивается до +2. Если вы используете ячейку заклинания 6-го круга или выше, бонус увеличивается до +3.
+
+***Используя более высокий круг.*** Если вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга или выше, бонус увеличивается до +2. Если вы используете ячейку заклинания 6-го круга или выше, бонус увеличивается до +3.
+
 ### Леденящее прикосновение
+
 Заговор некромантии
-Время сотворения:1 действие
-Дистанция: прикосновение
-Компоненты: В, С
-Длительность: 1 раунд
+
+**Время сотворения:** 1 действие
+
+**Дистанция:** прикосновение
+
+**Компоненты:** В, С
+
+**Длительность:** 1 раунд
+
 Совершите бросок атаки заклинанием в ближнем бою, чтобы коснуться существа и атаковать его жизненную силу холодом могилы. При попадании цель получает 1к8 некротического урона  и не может восстановливать хиты до начала вашего следующего хода. Это заклинание не действует на нежить или конструкции.
+
 Урон от заклинания увеличивается на 1к8, когда вы достигаете уровня заклинателя 5-го (2к8), 11-го (3к8), 17-го (4к8).
+
 ### Колесница Сустарре
+
 7-й круг призыва (ритуал)
-Время сотворения: 1 минута
-Дистанция: 30 футов
-Компоненты: В, С, М (небольшой кусок дерева, две ягоды падуба и источник огня размером не меньше костра)
-Длительность: 8 часов
+
+**Время сотворения:**  1 минута
+
+**Дистанция:** 30 футов
+
+**Компоненты:** В, С, М (небольшой кусок дерева, две ягоды падуба и источник огня размером не меньше костра)
+
+**Длительность:** 8 часов
+
 Вы вызываете колесницу Сустарре, которая появляется среди клубящегося облака дыма и огня, сопровождаемого раскатами грома. Колесница — это огромное транспортное средство, сделанное из латуни, украшенное мотивом солнечных лучей и запряженное двумя огненными лошадьми с Стихийного Плана Огня. Колесница появляется в любом незанятом пространстве в пределах досягаемости. Вы и до семи других Средних или меньших существ, которых вы коснулись при накладывании заклинания, можете безопасно войти в колесницу. Большое существо считается как четыре существа Среднего размера.) Любое другое существо, оказавшееся в пределах 5 футов от колесницы, получает урон огнём 2к6. Существо может получить этот урон только один раз за раунд.
+
 Пока заклинание не закончится, вы управляете колесницей с помощью устной команды. Вы можете заставить пылающих коней останавливаться или идти, рысью, бегом или полетом, а также поворачивать влево или вправо по вашему выбору. Колесница имеет скорость 60 футов и скорость полета 120 футов.
+
 Хотя колесница и кони кажутся отдельными, они считаются одним объектом с КЗ 18 и 90 хитами. Колесница невосприимчива ко всему немагическому урону. Рассеивание магии или заклинание божественного слова возвращает колесницу без пассажиров на Стихийный План Огня.
+
 Как только заклинание закончится, вы не сможете снова призвать колесницу Сустарре, пока не пройдет 10 дней.
+
 ###  Божественная энергия
+
 3-й круг отречения
-Время сотворения:1 действие
-Дистанция: прикосновение
-Компоненты: В, С
-Длительность: 8 часов
+
+**Время сотворения:** 1 действие
+
+**Дистанция:** прикосновение
+
+**Компоненты:** В, С
+
+**Длительность:** 8 часов
+
 Ваше прикосновение наполняет готовое существо благословенной силой. Оно получает 3к8 + 6 временных хитов на время действия. 
-Используя более высокий круг. Когда вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга или выше, временные хиты увеличиваются на 2к8 за каждый круг выше 3-го.
+
+***Используя более высокий круг.*** Когда вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга или выше, временные хиты увеличиваются на 2к8 за каждый круг выше 3-го.
+
 ### Божественная мощь
+
 4-й круг трансмутации
-Время сотворения: 1 бонусное действие
-Дистанция: на себя
-Компоненты: В, С
-Длительность: Концентрация, до 10 минут
+
+**Время сотворения:**  1 бонусное действие
+
+**Дистанция:** на себя
+
+**Компоненты:** В, С
+
+**Длительность:** Концентрация, до 10 минут
+
 Напевая молитву, ты наполняешься неземной мощью. Ваше божество отвечает на вашу молитву и наделяет удары вашего оружия божественным сиянием. На время действия вы получаете бонус +4 к проверкам Силы, основанным на Силе броскам атаки и броскам урона.
+
 ### Палящая вспышка
+
 Заговор эвокации
-Время сотворения:1 действие
-Дистанция: 60 футов
-Компоненты: В, С
-Длительность: Мгновенно
+
+**Время сотворения:** 1 действие
+
+**Дистанция:** 60 футов
+
+**Компоненты:** В, С
+
+**Длительность:** Мгновенно
+
 Короткая вспышка пламени вырывается из точки, которую вы можете видеть в пределах досягаемости. Каждое существо в 10-футовом кубе должно совершить спасбросок Ловкости. При провале цель получает урон огнём 1к4 или половину этого урона при успехе. 
+
 Урон от заклинания увеличивается на 1к4, когда вы достигаете уровня заклинателя 5-го (2к4), 11-го (3к4), 17-го (4к4).
+
 ### Солнечный удар
+
 3-й круг эвокации
-Время сотворения: 1 бонусное действие
-Дистанция: на себя
-Компоненты: В
-Длительность: 1 минута
+
+**Время сотворения:**  1 бонусное действие
+
+**Дистанция:** на себя
+
+**Компоненты:** В
+
+**Длительность:** 1 минута
+
 Вы можете сотворить  это заклинание, когда в свой ход наносите удар оружием ближнего боя. Ваше оружие вспыхивает ярким светом, и атака причиняет цели дополнительно 4к8 лучистыго урона. Кроме того, цель должна преуспеть в спасброске Телосложения, иначе она будет ослеплена до окончания действия заклинания.
-Используя более высокий круг. Если вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга или выше, урон увеличивается на 2к8 за каждый круг выше 3-его. 
+
+***Используя более высокий круг.*** Если вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга или выше, урон увеличивается на 2к8 за каждый круг выше 3-его. 
+
 ### Переписывание
+
 Заговор трансмутации
-Время сотворения: 1 минута
-Дистанция: 30 футов
-Компоненты: В, С
-Длительность: Мгновенно
+
+**Время сотворения:**  1 минута
+
+**Дистанция:** 30 футов
+
+**Компоненты:** В, С
+
+**Длительность:** Мгновенно
+
 Вы выбираете не[магическое письмо, карту, произведение искусства, изображение или сцену в пределах досягаемости, а также чистую книгу, свиток или пергамент в пределах досягаемости. Выбранный текст или изображение переносится на чистую книгу, свиток или пергамент, как если бы он был написан или нарисован мастером-писцом или художником. Одного заклинания достаточно, чтобы расшифровать около 50 страниц текста и изображений.
+
 ### Темная дискорпорация
+
 2-й круг трансмутации
-Время сотворения:1 действие 
-Дистанция: на себя
-Компоненты: В, С
-Длительность: Концентрация, до 1 минуты
+
+**Время сотворения:** 1 действие 
+
+**Дистанция:** на себя
+
+**Компоненты:** В, С
+
+**Длительность:** Концентрация, до 1 минуты
+
 Вы превращаетесь в рой летучих мышей или рой крыс.
+
 Трансформация длится в течение длительности или до тех пор, пока ваши хиты не опустятся до 0 или вы не умрете. Ваша игровая статистика заменяется статистикой новой формы, хотя вы сохраняете свое мировоззрение и показатели Интеллекта, Мудрости и Харизмы. Вы принимаете хиты новой формы, и когда вы возвращаетесь в свою обычную форму, вы возвращаетесь к тому количеству хитов, которое было у вас до трансформации. Если вы возвращаетесь в свою обычную форму в результате падения хитов до 0, любой избыточный урон переносится на вашу обычную форму. Вы ограничены в действиях, которые можете выполнять, в силу природы вашей новой формы, и вы не можете говорить, произносить заклинания или предпринимать какие-либо другие действия, для которых требуются руки или речь.
+
 Ваше снаряжение сливается с новой формой. Вы не можете активировать, использовать, владеть или иным образом получать выгоду от любого вашего снаряжения.
