--- a/src/content/posts/core-d20/classes.mdx
+++ b/src/content/posts/core-d20/classes.mdx
@@ -1,5 +1,5 @@
 ---
-title: Классы в Core d20 RPG
+title: '[Core d20 RPG] Классы в Core d20 RPG'
 description: Описание классов используемых в Core d20 RPG
 date: 05-05-2023
 tags:
