Martial Traditions to Core d20

--- a/src/content/posts/core-d20/martial-traditions.mdx
+++ b/src/content/posts/core-d20/martial-traditions.mdx
@@ -32,10 +32,8 @@ tags:
 
 <Aside v="crimson">
 
-[Скачать docx](/files/E5E_MARTIAL_TRADITIONS_SCHOOLS_TECHNIQUES_MANEUVERS_RUS_REV03_05052023.docx)
+[Скачать DOCX](/files/E5E_MARTIAL_TRADITIONS_SCHOOLS_TECHNIQUES_MANEUVERS_RUS_REV03_05052023.docx)
 
-[Скачать pdf](/files/E5E_MARTIAL_TRADITIONS_SCHOOLS_TECHNIQUES_MANEUVERS_RUS_REV03_05052023.pdf)
+[Скачать PDF](/files/E5E_MARTIAL_TRADITIONS_SCHOOLS_TECHNIQUES_MANEUVERS_RUS_REV03_05052023.pdf)
 
 </Aside>
-
-Обсудить этот материал вы можете у нас в телеграмме или на нашем дискорд сервере. Или оставив комментарий на том сайте (сервере), где вы увидели опубликованную мной ссылку.
