Fix dates and unnecessary quotes

--- a/src/content/posts/articles/once-upon-a-time-at-inn-ua.mdx
+++ b/src/content/posts/articles/once-upon-a-time-at-inn-ua.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'dmsguild.com - Однажды на постоялом дворе - перевод на украинский - Одного разу на постоялому дворі'
+title: '[DMsGuild] Однажды на постоялом дворе - перевод на украинский - Одного разу на постоялому дворі'
 description: Наконец-то опубликовал оформленный перевод приключения Однажды на постоялом дворе, сделанный несравненной Олей Туомари
-date: '2023-05-14'
+date: 2023-05-14
 tags:
   - DMsGuild
   - Перевод
