--- a/src/content/posts/core-d20/classes.mdx
+++ b/src/content/posts/core-d20/classes.mdx
@@ -4,7 +4,7 @@ description: Описание классов используемых в Core d2
 date: 2023-05-05
 tags:
   - Core d20 RPG
-  - E5E
+  - Homebrew
   - Классы
   - Боец
   - Плут
