--- a/src/content/posts/articles/descriptive-and-acrive-roleplaying.mdx
+++ b/src/content/posts/articles/descriptive-and-acrive-roleplaying.mdx
@@ -13,9 +13,9 @@ tags:
 
 Исследование подземелий, преодоление препятствий и уничтожение чудовищ являются ключевыми частями приключений Core d20 RPG , но не менее важными являются социальные взаимодействия, которые искатели приключений имеют с другими людьми и чудовищами в мире.
 
-Взаимодействие принимает множество форм. Возможно, вам придется убедить торговца раскрыть секреты гильдии воров или попытаться польстить дракону, чтобы он пощадил вас. В любом случае Мастер берет на себя роль любых персонажей, которые участвуют в разговоре, но не принадлежат другому игроку за столом. Эти персонажи называются неигровыми персонажами (НИП).
+Взаимодействие принимает множество форм. Возможно, вам придется убедить торговца раскрыть секреты гильдии воров или попытаться польстить дракону, чтобы он пощадил вас. В любом случае Мастер берет на себя роль любых персонажей, которые участвуют в разговоре, но не принадлежат другому игроку за столом. Эти персонажи называются персон Мастера (ПМ) или неигровыми персонажами (НИП).
 
-В общих чертах отношение НИП к вам описывается как дружелюбное, безразличное или враждебное. Дружественные НИП предрасположены помочь вам, а враждебные склонны встать у вас на пути. Конечно, легче получить желаемое от дружественного НИП.
+В общих чертах отношение персонажа к вам описывается как дружелюбное, безразличное или враждебное. Дружественные НИП предрасположены помочь вам, а враждебные склонны встать у вас на пути. Конечно, легче получить желаемое от дружественного персонажа.
 
 Есть два основных аспекта социальных взаимодействий: отыгрыш и проверки.
 
@@ -66,10 +66,10 @@ tags:
 
 ## РЕЗУЛЬТАТЫ ОТЫГРЫША
 
-Мастер использует действия и отношения вашего персонажа , чтобы определить реакцию НИП. Трусливый НИП сдается под угрозой насилия. Упрямый гном не позволяет никому травить себя . Тщеславный дракон упивается лестью.
+Мастер использует действия и отношения вашего персонажа , чтобы определить реакцию персонажа. Трусливый персонаж сдается под угрозой насилия. Упрямый гном не позволяет никому травить себя . Тщеславный дракон упивается лестью.
 
-При взаимодействии с НИП обратите пристальное внимание на то, как Мастер изображает настроение, диалоги и личность персонажа. Если можете, соберите информацию о НИП перед взаимодействием. Узнав, что мотивирует НИП, вы сможете изменить его или ее отношение в вашу пользу. В частности, вы можете определить черты характера, идеалы, недостатки и связи НИП и сыграть на них, чтобы повлиять на отношение НИП.
+При взаимодействии с персонажем обратите пристальное внимание на то, как Мастер изображает настроение, диалоги и личность персонажа. Если можете, соберите информацию о НИП перед взаимодействием. Узнав, что мотивирует этого персонажа, вы сможете изменить его или ее отношение в вашу пользу. В частности, вы можете определить черты характера, идеалы, недостатки и связи персонажа и сыграть на них, чтобы повлиять на отношение НИПперсонажа.
 
-Взаимодействия в Core d20 RPG очень похожи на взаимодействия в реальной жизни. Если вы можете предложить НИП то, что они хотят , угрожать им чем-то, чего они боятся, или сыграть на их симпатиях и целях, вы можете использовать слова, чтобы получить почти все, что вы хотите. С другой стороны, если вы оскорбляете гордого воина или плохо отзываетесь о союзниках знати, ваши попытки убедить или обмануть не увенчаются успехом.
+Взаимодействия в Core d20 RPG очень похожи на взаимодействия в реальной жизни. Если вы можете предложить персонажу то, что они хотят , угрожать им чем-то, чего они боятся, или сыграть на их симпатиях и целях, вы можете использовать слова, чтобы получить почти все, что вы хотите. С другой стороны, если вы оскорбляете гордого воина или плохо отзываетесь о союзниках знати, ваши попытки убедить или обмануть не увенчаются успехом.
 
 
