--- a/src/content/posts/core-d20/how-to-make-tactical-combat.mdx
+++ b/src/content/posts/core-d20/how-to-make-tactical-combat.mdx
@@ -1,6 +1,6 @@
 ---
 title: '[Core d20 RPG] Советы начинающему МАСТЕРУ: как сделать сражение более тактическим'
-decription: 'Небольшая подборка советов для начинающего мастера про то, как сделать сражение более интересным и тактическимм'
+description: 'Небольшая подборка советов для начинающего мастера про то, как сделать сражение более интересным и тактическимм'
 date: 2023-05-16
 tags:
 - 'Core d20 RPG'
