--- a/src/content/posts/articles/using-mdx.mdx
+++ b/src/content/posts/articles/using-mdx.mdx
@@ -2,9 +2,9 @@
 draft: true
 title: Справка по MDX
 description: В этом руководстве вы узнаете об основах формата MDX, дополнительном синтаксисе и компонентах.
-date: 2023-01-13
+date: 2023-01-01
 cover: ~assets/covers/might-and-magic.webp
-author: Алекс «Phenomen» Василенко
+author: Phenomen
 tags:
   - Техническое
 ---
