--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -35,3 +35,7 @@ links:
 Сейчас мы переводим несколько книг англоязычных авторов, продолжаем работу над переводом SRD 5.1 и готовим свои материалы, которые могут заменить D&D 5e после выхода One D&D - наш проект Core d20 RPG
 
 </Aside>
+
+Если вдруг надо специальное сражение для боев на арене
+
+<Generator id="pit-fighting" />
