--- a/src/content/posts/core-d20/enhanced-shields.mdx
+++ b/src/content/posts/core-d20/enhanced-shields.mdx
@@ -33,6 +33,10 @@ tags:
 
 <Generator id="enhanced-shields" />
 
+Если вдруг надо специальное сражение для боев на арене
+
+<Generator id="pit-fighting" />
+
 Для использования щита из определенной категории необходимо иметь навык владения доспехом соответствующей категории (т.е. тяжелые доспехи для башенного щита).
 
 Свойства или особенности, которые ограничены использованием доспехов определенной категории также ограничены использованием щитов определенной категории.
