--- a/src/content/generators/pit-fighting.mdx
+++ b/src/content/generators/pit-fighting.mdx
@@ -12,5 +12,9 @@ tables:
     - Опасная яма Эта **арена** - не более чем шаткий каркас над ямой существа, которое будет переваривать жертв в течение 1000 лет, если они упадут. В боях наблюдается более высокий уровень смертельных исходов. Но призы все равно слишком велики.
     - Перчатка колдуна Мастер этой арены-неброское, темноволосое, бледное подобие изнеженного человека, но он остается непобежденным. Над ареной он надевает перчатку и лезет в свой магический бассейн. Его рука поднимается с пола арены, пятиглавая гидра—каждая голова управляется пальцем. Он пробирается через бассейн и давит своих противников, как крошечных мух, на которых они похожи. У него много последователей, которые фетишизируют его гигантскую руку.
     - Тонкий веер Лучшие гладиаторы на этой арене-все могущественные монахи и ниндзя. Они одеты только в шелковые ленты и получают дополнительный бонус к своему классу защиты, равный их харизме, разделенной на три, в дополнение к обычным бонусам от их класса.
+  - table: а
+    results:
+    - б
+    - в
 ---
 
