--- a/src/content/posts/core-d20/how-to-make-tactical-combat.mdx
+++ b/src/content/posts/core-d20/how-to-make-tactical-combat.mdx
@@ -8,6 +8,8 @@ tags:
 - 'Советы Мастеру'
 ---
 
+<Generator id="pit-fighting" />
+
 Эти советы прекрасно подойдут начинающему Мастеру, который не особо понимает, как сделать сражение более интересным и чтобы он сводился просто к «я бью его снова».
 
 Эти маленькие полубоги, которых некоторые называют игровыми персонажами, бегают по всем вашим встречам, не вспотев? Может быть, они даже имели наглость называть встречи «легкими». 5-ая редакция действительно повысило уровень силы игроков, и вам, как Мастеру, может быть трудно осмысленно бросить им вызов. Вы всегда можете потратить больше опыта на свой бюджет на бой, чтобы увеличить сложность, но придание всем вашим боям сложности «Смертельный» также делает бои намного более непредсказуемыми, где пара плохих бросков может означать внезапный TPK. Вместо этого попробуйте добавить в свой бой следующие тактические элементы, которые имеют двойное преимущество: делают бой более сложным, не увеличивая бюджет боя, и больше вовлекают ваших игроков, заставляя их сотрудничать и обращать внимание, даже когда не их очередь.
