--- a/src/content/posts/articles/mission-generator.mdx
+++ b/src/content/posts/articles/mission-generator.mdx
@@ -10,6 +10,8 @@ tags:
 
 Инструмент который позволит создавать различные задания для вашей группы авантюристов.
 
+<Generator id="mission-generator" />
+
 ## Задания
 
 1.  Нападение/рейд
