--- a/src/content/generators/mission-generator.mdx
+++ b/src/content/generators/mission-generator.mdx
@@ -55,12 +55,14 @@ tables:
  - Персонал
  - Контрабанда
  - Товары
- - . Оружие
+ - Оружие
  - Люди/Предметы
 
 - table: Государственный переворот
  results:
  - переворот
+ - переворот
+ - 
 - table: Дуэль/Соревнование
  results:
  - Спорт
@@ -74,15 +76,16 @@ tables:
  results:
   - бесплатно
   - платно
-- table: Саботаж
 
+- table: Саботаж
+  results:
  - Поджог
  - Разрушение
  - Подкидывание доказательств
  - Подделка
 
 - table: Исследование
-
+  results:
  - Область
  - Картографирование
  - Прокладка путей
@@ -92,13 +95,13 @@ tables:
  - Население
 
 - table: Тайны
-
+  results:
  - Убийство
  - Исчезновение
  - Загадка/Головоломка
 
 - table: Навыки (кулинария/кожевничество и т.д.)
-
+  results:
  - Труд (батрак, разнорабочий)
  - Белый воротничок (оценщик, писец)
  - Черный рынок (Фальсификатор, Взломщик)
