--- a/src/content/generators/mission-generator.mdx
+++ b/src/content/generators/mission-generator.mdx
@@ -1,12 +1,17 @@
 ---
-title: Генератор миссий
-description: Генератор миссий для авантюристов
+title: Расширенные щиты
+description: Расширенные варианты щитов для Core d20 RPG
 tables:
- - table: Нападение/рейд
+  - table: Лёгкие щиты
     results:
-      - Крепость
-      - Город
-      - Корабль
-      - Засада
-      - Стычка
- ---
+      - Кулачный щит
+      - Небольшой щит
+  - table: Средние щиты
+    results:
+      - Кавалерийский щит
+      - Пехотный щит
+  - table: Тяжёлые щиты
+    results:
+      - Павиза
+      - Башенный щит
+---
