--- a/src/content/generators/mission-generator.mdx
+++ b/src/content/generators/mission-generator.mdx
@@ -1,11 +1,11 @@
 ---
-title: Расширенные щиты
-description: Расширенные варианты щитов для Core d20 RPG
+title: Генератор заданий
+description: Простой генератор заданий для авантюристов, который тем не менее покрывает практически все возможные варианты
 tables:
-  - table: Лёгкие щиты
+  - table: Нападение/рейд
     results:
-      - Кулачный щит
-      - Небольшой щит
+      - Крепость
+      - Город
   - table: Средние щиты
     results:
       - Кавалерийский щит
