--- a/src/content/posts/core-d20/feats-1.mdx
+++ b/src/content/posts/core-d20/feats-1.mdx
@@ -1,6 +1,6 @@
 ---
 title: '[Core d20 RPG] Черты, часть 1'
-description: Две черты для Core d20 RPG - Написание свитков и Лучник заклинатель
+description: 'Две черты для Core d20 RPG - Написание свитков и Лучник заклинатель'
 date: 2023-05-15
 tags:
   - Core d20 RPG
