--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-snaryazhenie-avantyurista-1.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-snaryazhenie-avantyurista-1.mdx
@@ -57,14 +57,12 @@ tags:
 Вторым фактором ограничивающим применение расходуемых немагических предметов является их высокая стоимость, поэтому её стоит вернуть к значениям 3.5 редакции.
 
 > **Алхимический огонь** – 25 зм.
-
 > **Кислота** – 10 зм.
-
-> Зелье лечения – 25 зм.
+> **Зелье лечения** – 25 зм.
 
 Два других предмета из категории используемых – это противоядие и базовый яд. Противоядие не используется в первую очередь из-за его высокой стоимости и отсутствия срабатывания без триггера, поэтому мы предлагаем следующую формулировку.
 
-> **Противоядие (50 зм).** Существо, которое выпивает этот флакон жидкости, получает преимущество на спасбросках против яда в течение 1 часа и если оно уже отравлено сразу совершает спасбросок против действующего эффекта. Оно не предоставляет преимущества нежити и конструктам.
+> **Противоядие (50 зм).** Вес - 4 унции. одно использование потребляет 1 унцию. Существо, которое выпивает этот флакон жидкости, получает преимущество на спасбросках против яда в течение 1 часа и если оно уже отравлено сразу совершает спасбросок против действующего эффекта. Оно не предоставляет преимущества нежити и конструктам.
 
 Что касается базового яда, то сама его суть весьма плохо поддается балансировке. И хотя очевидно что 1к4 урона ядом с КС 10 за 100 зм это абсолютно не целесообразное использование денег, но прямых и легких способов изменить его привлекательность практически нет.
 
