--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -18,6 +18,20 @@ https://docs.google.com/document/d/1kTmUlLBEBorm8O4o6HnZEhUb3-_pazgNMUig6nkwr_w/
 
 Core d20 RPG - это проект по написанию набора правил совместимых с D&D 5e на основе SRD 5.1 и OGL материалов, который будет бесплатен для распространения.
 
+### Зачем мы это делаем?
+
+Во-первых, существующие правила не покрывают всего многообразия ситуаций с которыми сталкивается мастер.
+
+Во-вторых, мы стараемся поддерживать непрерывный опыт у наших игроков, и поэтому чьи-то рулинги, более формализованные и структурированные становятся основой взаимодействий персонажей с окружающим миром — будь-то социальные взаимодействия, тренировки бойцовских животных или построение сети информаторов для сбора сведений в городской кампании. А официальные правила не могут покрывать всего.
+
+В-третьих, некоторые правила явно обладают врожденными недостатками — чего стоит история с чертой Мастер Щитов и трактовкой ее использования — на исправление проблем игровой привлекательности и баланса также нацелена часть наших дополнительных правил.
+
+Четвертое, но не последнее — мы развиваем систему и стремимся дать игрокам русскоязычного сообщества бесплатную базу игровых материалов. В частности запланированы предыстории, расы и подрасы, классы и архетипы, черты, дополнительные заклинания и механики для перерывов между приключениями.
+
+Наши дополнительные правила базируются на анализе материалов с реддита, Гильдии мастеров и сторонних издателей — таких как Kobold Press, Paradigm Conceptcs и прочих.
+
+Надо ли это вам? Конечно, надо.
+
 ## Старые материалы по Лиге Авантюристов
 
 Старые материалы по Лиге Авантюристов, которые размещены online
