--- a/src/content/posts/articles/mechi-i-koldovstvo.mdx
+++ b/src/content/posts/articles/mechi-i-koldovstvo.mdx
@@ -1,13 +1,12 @@
 ---
 title: "Мечи и колдовство"
 description: Заметки про домашние правила
-date: "2021-03-05"
+date: 2021-03-05
 tags: 
   - Сражение
   - Кормир
   - Снаряжение
   - Homebrew
-coverImage: "knight-2551859_1920-1.jpg"
 ---
 
 Так уж получилось, что для своей кампании по Кормиру мне приходится дописывать домашние правила как для любителей махать мечами так и для волшебников и других заклинателей.
@@ -29,7 +28,7 @@ coverImage: "knight-2551859_1920-1.jpg"
 > Standard rules for fighting with two weapons make it useless for ranger (who must use bonus action to get benefits of Hunter’s Mark) and fighter after 11 level. So, this variant rule fixes this problem – freeing bonus action and creating synergy effect of Action Surge for fighter. 
 > When you take the Attack action and attack with a melee weapon, that not have heavy property, or light ranged weapon that you're holding in one hand, you can use a bonus action to attack with a different light weapon that you're holding in the other hand. You don't add your ability modifier to the damage of the bonus attack, unless that modifier is negative.
 > If either weapon has the thrown property, you can throw the weapon, instead of making a melee attack with it.
-> If later you receive ability to make Extra attacks, then you make first attack with off-hand weapon as part of Attack action and still can make second attack with off-hand weapon as a bonus action.</p>
+> If later you receive ability to make Extra attacks, then you make first attack with off-hand weapon as part of Attack action and still can make second attack with off-hand weapon as a bonus action.
 
 ### **Extra attack in multiclassing (variant)**
 > 
