--- a/src/content/posts/articles/nerath.mdx
+++ b/src/content/posts/articles/nerath.mdx
@@ -1,6 +1,6 @@
 ---
 title: Nerath - История и обзор Nentir Vale
-descrption: Nerath - История и обзор Nentir Vale
+description: Nerath - История и обзор Nentir Vale
 date: 2021-07-10
 tags: 
   - Nentir Vale
