--- a/src/content/posts/articles/generalized-downtime.mdx
+++ b/src/content/posts/articles/generalized-downtime.mdx
@@ -1,10 +1,11 @@
 ---
-title: "Обобщенные правила простоя"
+title: Обобщенные правила простоя
 description: Набор правил для обработки любых действий, связанных с простоем, которые выполняются в течение длительного периода времени.
 date: 2022-07-24
 tags: 
   - Homebrew
   - Мысли вслух
+  - Деятельность простоя
 ---
 
 
@@ -77,7 +78,7 @@ tags:
 
 **Время:** рабочая неделя (5 дней)
 
-Стоимость: за приращение (на основе обучения)
+**Стоимость:** за приращение (на основе обучения)
 
 **Результат:** получить навык
 
@@ -111,6 +112,7 @@ tags:
 Создание предметов — это трудоемкая деятельность по превращению сырья в готовую продукцию с использованием набора инструментов. Чтобы создать любой предмет, у вас должен быть соответствующий набор инструментов, владение этими инструментами и сырье, стоимость которого равна половине стоимости предмета. Для некоторых предметов вам также может понадобиться доступ к дополнительному оборудованию, мастерской или другим мастерам, которые помогут в процессе.
 
 Объем и КС, а также то, какая характерстика используется для проверки инструмента, для любого данного предмета определяется Мастером, поскольку перечисление этого для каждого возможного предмета потребовало бы огромного количества таблиц. Вот несколько примеров в качестве предложения:
+
 | Пример предмета    | Масштаб       | Инструмент                          | КС |
 |--------------------|---------------|-------------------------------------|----|
 | Антитоксин         | Узкий (3)     | Интеллект (набор травника)          | 12 |
