--- a/src/content/posts/articles/two-gish-spells.mdx
+++ b/src/content/posts/articles/two-gish-spells.mdx
@@ -1,13 +1,11 @@
 ---
 title: Заклинания для гишей
 description: Два домашних заклинания для гишей
-date: "2021-12-02"
-categories: 
-  - "заклинания"
+date: 2021-12-02
 tags: 
   - E5E
   - Homebrew
-  - Заклинания"
+  - Заклинания
 ---
 
 ## **Молниевый клинок**
