--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-kak-daleko-ty-vidish.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-kak-daleko-ty-vidish.mdx
@@ -1,7 +1,7 @@
 ---
 title: "[Core d20 RPG] Мысли вслух. Дневник разработчика. Как далеко ты видишь?"
 description: Насколько далеко видит персонаж в D&D
-date: "2023-02-12"
+date: 2023-02-12
 tags: 
   - Core d20 RPG
   - Исследование
