--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotki-puteshestviya-i-issledovaniya-chast-2.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotki-puteshestviya-i-issledovaniya-chast-2.mdx
@@ -1,6 +1,6 @@
 ---
 title: "[Core d20 RPG] Мысли вслух. Дневник разработки. Путешествия и исследования, часть 2"
-date: "2023-02-22"
+date: 2023-02-22
 description: 'Про путешествия'
 tags: 
   - 'Core d20 RPG'
@@ -8,7 +8,6 @@ tags:
   - 'hexcrawlх'
   - 'Путешествие'
 ---
-
 
 В прошлый раз мы говорили о том, что хотим сделать в этом разделе правил и из чего он должен состоять. Но плотно работая над вопросом исследований и путешествий, решил поменять парадигму.
 
