--- a/src/content/posts/articles/generalized-downtime.mdx
+++ b/src/content/posts/articles/generalized-downtime.mdx
@@ -1,11 +1,11 @@
 ---
-title: Обобщенные правила простоя
-description: Набор правил для обработки любых действий, связанных с простоем, которые выполняются в течение длительного периода времени.
-date: 2022-07-24
+title: 'Обобщенные правила простоя'
+description: 'Набор правил для обработки любых действий, связанных с простоем, которые выполняются в течение длительного периода времени.'
+date: '2022-07-24'
 tags: 
-  - Homebrew
-  - Мысли вслух
-  - Деятельность простоя
+  - 'Homebrew'
+  - 'Мысли вслух'
+  - 'Деятельность простоя'
 ---
 
 ### Основные понятия
