--- a/src/content/posts/articles/mission-generator.mdx
+++ b/src/content/posts/articles/mission-generator.mdx
@@ -1,6 +1,6 @@
 ---
-title: Генератор заданий
-description: Простой генератор заданий для авантюристов, который тем не менее покрывает практически все возможные варианты
+title: 'Генератор заданий'
+description: 'Простой генератор заданий для авантюристов, который тем не менее покрывает практически все возможные варианты'
 date: 2023-05-14
 tags:
   - Задания
