--- a/src/content/posts/articles/gm-advice-how-to-make-skill-checks.mdx
+++ b/src/content/posts/articles/gm-advice-how-to-make-skill-checks.mdx
@@ -1,6 +1,6 @@
 ---
-title: Пять советов мастеру, про то как совершать проверки навыков и характеристик
-description: Пять советов мастеру, про то как совершать проверки навыков и характеристик в D&D 5e и не только
+title: 'Пять советов мастеру, про то как совершать проверки навыков и характеристик'
+description: 'Пять советов мастеру, про то как совершать проверки навыков и характеристик в D&D 5e и не только'
 date: 2023-05-07
 tags:
   - 5E
