--- a/src/content/posts/articles/economy-of-dnd-1.mdx
+++ b/src/content/posts/articles/economy-of-dnd-1.mdx
@@ -1,13 +1,13 @@
 ---
-title: Экономическая модель пятой редакции Dungeons and Dragons – стоимость волшебных предметов, часть 1
-description: Поиск способов оценки волшебных предметов
-date: 2022-07-24
+title: 'Экономическая модель пятой редакции Dungeons and Dragons – стоимость волшебных предметов, часть 1'
+description: 'Поиск способов оценки волшебных предметов'
+date: '2022-07-24'
 tags:
-  - Анализ
-  - Экономика
-  - Волшебные предметы
-  - Цены
-  - Ресурсы для мастера
+  - 'Анализ'
+  - 'Экономика'
+  - 'Волшебные предметы'
+  - 'Цены'
+  - 'Ресурсы для мастера'
 ---
 
 Disclaimer. Эта заметка не является полноценным научным исследованием, а скорее немного систематизированным изложением моих мыслей и подходов к перебалансировке цен в моих играх.
