--- a/src/content/posts/articles/about-marwang-2.mdx
+++ b/src/content/posts/articles/about-marwang-2.mdx
@@ -13,9 +13,11 @@ tags:
 
 ## Место действия приключений
 
- В основном действие приключений разворачивается на просторах Империи Атеро (также называеомой Новой Империей), которая является единственным значимым государством на материке. В Империи Атеро странным образом сочетается жесткое имперское управление, весьма автономоное местное самоуправление, диктат законов и высокий уровень гражданских прав и свобод. Новая империя постоянно пытается "отгрызть" еще кусочек земель - зачистить от опасных существ и эффектов, возникших в ходе или после Катаклизма. При этом не обходится и без внешних угроз:
+В основном действие приключений разворачивается на просторах Империи Атеро (также называеомой Новой Империей), которая является единственным значимым государством на материке. В Империи Атеро странным образом сочетается жесткое имперское управление, весьма автономоное местное самоуправление, диктат законов и высокий уровень гражданских прав и свобод. Новая империя постоянно пытается "отгрызть" еще кусочек земель - зачистить от опасных существ и эффектов, возникших в ходе или после Катаклизма. 
 
-- чародеи-кинаги, обитающие вне основной планеты и совершающие набеги на земли Империи на своих живых кораблях
+При этом не обходится и без внешних угроз:
+
+  -чародеи-кинаги, обитающие вне основной планеты и совершающие набеги на земли Империи на своих живых кораблях
 - Небесные странники двелары, произошедшие от дварфов, которые увлекаются биомагическими модификациями своего тела и своих слуг, живущие на летающиех живых городах и регулярно переходящие от торговли с Империей к разбойным нападениям на ее земли.
 - Драконий Кряж и его бесчисленные красные драконы которые постоянно пробуют на прочность северные рубежи Империи
 - Чудовища, постоянно прущие из смертносных джунглей на востоке и штурмующие Ааронов вал.
@@ -24,6 +26,6 @@ tags:
 
 ## Особенности сеттинга
 
- Высокий уровень волшебства и магии в повседневеной жизни - арканотехнологии, биоаркана, псионика, маготехнологии - не являются чем-то удивительным в мире Технологический уровень развития Империи Атеро приблизительно на уровне середины 19- начала 20 века. Серая мораль цивилизации, постоянно балансирующей на краю гибели, и вынужденной принимать жесткие решения Постоянные кризисы, которые проявляют все лучшие и худшие черты персонажей.
+Высокий уровень волшебства и магии в повседневеной жизни - арканотехнологии, биоаркана, псионика, маготехнологии - не являются чем-то удивительным в мире Технологический уровень развития Империи Атеро приблизительно на уровне середины 19- начала 20 века. Серая мораль цивилизации, постоянно балансирующей на краю гибели, и вынужденной принимать жесткие решения Постоянные кризисы, которые проявляют все лучшие и худшие черты персонажей.
 
 Домашняя страница проекта - [Marwang Homepage | World Anvil](https://www.worldanvil.com/w/marwang-palant)
