--- a/src/content/posts/articles/about-marwang-2.mdx
+++ b/src/content/posts/articles/about-marwang-2.mdx
@@ -1,12 +1,13 @@
 ---
-title: Про недоразвитый домашний сеттинг
-description: Домашний сеттинг
+title: 'Про недоразвитый домашний сеттинг'
+description: 'Домашний сеттинг'
 date: 2021-06-23
 tags: 
-  - Marwang
+  - 'Marwang'
 ---
 
 У нашей команды опять наклевывается небольшая кампания по нашему недоразвитому сеттингу Марвангу. И возник вопрос - публиковать ли здесь материалы по этому сеттингу?  
+
 Описание сеттинга - ниже.
 
 Марванг это переживший глобальный катаклизм высокоразвитый маготехнический мир. 
@@ -17,7 +18,7 @@ tags:
 
 При этом не обходится и без внешних угроз:
 
-  -чародеи-кинаги, обитающие вне основной планеты и совершающие набеги на земли Империи на своих живых кораблях
+- чародеи-кинаги, обитающие вне основной планеты и совершающие набеги на земли Империи на своих живых кораблях
 - Небесные странники двелары, произошедшие от дварфов, которые увлекаются биомагическими модификациями своего тела и своих слуг, живущие на летающиех живых городах и регулярно переходящие от торговли с Империей к разбойным нападениям на ее земли.
 - Драконий Кряж и его бесчисленные красные драконы которые постоянно пробуют на прочность северные рубежи Империи
 - Чудовища, постоянно прущие из смертносных джунглей на востоке и штурмующие Ааронов вал.
