--- a/src/content/posts/articles/descriptive-and-acrive-roleplaying.mdx
+++ b/src/content/posts/articles/descriptive-and-acrive-roleplaying.mdx
@@ -31,13 +31,13 @@ tags:
 
 При таком подходе вы описываете слова и действия вашего персонажа Мастеру и другим игрокам. Опираясь на свой мысленный образ своего персонажа, вы рассказываете всем, что делает ваш персонаж и, что более важно, как он или она это делает.
 
-<aside>
+<Aside>
 
 Например, Крис отыгрывает дварфа Тордека . У Тордека вспыльчивый характер, и он винит эльфов Плащевого леса в несчастье своей семьи. В таверне несносный эльф-менестрель сидит за столом Тордека и пытается завязать разговор с дварфом.
 
 Крис говорит: « Тордек плюет на пол, оскорбляет барда и топает к бару. Он садится на табурет и смотрит на менестреля, прежде чем заказать еще выпивку».
 
-</aside>
+</Aside>
 
 В этом примере Крис передал Тордеку настроение и дает Мастеру ясное представление о настроении и действиях его персонажа.
 
