--- a/src/content/posts/articles/once-upon-a-time-at-inn-ua.mdx
+++ b/src/content/posts/articles/once-upon-a-time-at-inn-ua.mdx
@@ -1,11 +1,11 @@
 ---
 title: '[DMsGuild] Однажды на постоялом дворе - перевод на украинский - Одного разу на постоялому дворі'
-description: Наконец-то опубликовал оформленный перевод приключения Однажды на постоялом дворе, сделанный несравненной Олей Туомари
+description: 'Наконец-то опубликовал оформленный перевод приключения Однажды на постоялом дворе, сделанный несравненной Олей Туомари'
 date: 2023-05-14
 tags:
-  - DMsGuild
-  - Перевод
-  - Украинский
+  - 'DMsGuild'
+  - 'Перевод'
+  - 'Украинский'
 links:
   - label: 'Core D20'
     href: '/tags/cored20'
