--- a/src/content/posts/articles/srd-translate-bestiary-90-percents.mdx
+++ b/src/content/posts/articles/srd-translate-bestiary-90-percents.mdx
@@ -1,9 +1,9 @@
 ---
-title: [Перевод SRD] Перевод бестиария - 90%
-description: Файлы для ознакомления с переводом срд бестиария
-date: 2022-06-03
+title: '[Перевод SRD] Перевод бестиария - 90%'
+description: 'Файлы для ознакомления с переводом срд бестиария'
+date: '2022-06-03'
 tags: 
-  - Перевод SRD
+- 'Перевод SRD'
 ---
 
 Наконец-то удалось сделать большую часть работы по переводу Бестиария SRD.
