--- a/src/content/posts/articles/about-marwang-2.mdx
+++ b/src/content/posts/articles/about-marwang-2.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Про недоразвитый домашний сеттинг'
-description: 'Домашний сеттинг'
+title: Марванг
+description: Марванг
 date: 2021-06-23
 tags: 
-  - 'Marwang'
+  - Марванг
 ---
 
 У нашей команды опять наклевывается небольшая кампания по нашему недоразвитому сеттингу Марвангу. И возник вопрос - публиковать ли здесь материалы по этому сеттингу?  
