--- a/src/content/posts/articles/dragonchess.mdx
+++ b/src/content/posts/articles/dragonchess.mdx
@@ -1,6 +1,6 @@
 ---
 title: Драконьи шахматы
-description: Драконьи шахматы это один из доступных персонажам игроков игровых наборов в пятой редакции. Эта статья расскажет как все таки в них играть не просто броском костей.
+description: Драконьи шахматы это один из доступных персонажам игроков игровых наборов в пятой редакции
 date: 2020-02-17
 tags: 
 - Драконьи шахматы
