--- a/src/content/posts/articles/excel-resources.mdx
+++ b/src/content/posts/articles/excel-resources.mdx
@@ -1,6 +1,6 @@
 ---
-title:  'Ресурсы для D&D в Excel на английском и русском'
-description: 'Подборка ресурсов для D&D в Excel на английском и русском'
+title:  'Ресурсы в Excel на английском и русском'
+description: 'Подборка ресурсов в Excel на английском и русском'
 date: 2019-11-12
 tags: 
   - 'Excel'
