--- a/src/content/posts/articles/legal-information-srd-51.mdx
+++ b/src/content/posts/articles/legal-information-srd-51.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Правовая информация | SRD 5.1"
-description: Правовая информация по SRD 5.1
-date: 2020-09-18
+title: Правовая информация
+description: Правовая информация
+date: 2023-05-17
 tags: 
-  - Перевод SRD 
+- Перевод SRD
 ---
 
 Текст SRD распространяется по лицензии Open Gaming License.
