--- a/src/content/posts/core-d20/multiclassing.mdx
+++ b/src/content/posts/core-d20/multiclassing.mdx
@@ -1,5 +1,5 @@
 ---
-title: [Core d20 RPG] Классовые особенности при мультиклассировании
+title: '[Core d20 RPG] Классовые особенности при мультиклассировании'
 description: Классовые особенности при мультиклассировании
 date: 2023-05-17
 tags:
