--- a/src/content/posts/articles/generalized-downtime.mdx
+++ b/src/content/posts/articles/generalized-downtime.mdx
@@ -1,15 +1,14 @@
 ---
-title: 'Обобщенные правила простоя'
-
-description: 'Набор правил для обработки любых действий, связанных с простоем, которые выполняются в течение длительного периода времени.'
-
-date: '2022-07-24'
-
-tags: 
-  - 'Homebrew'
-  - 'Мысли вслух'
-  - 'Деятельность простоя'
+title: downtime
+description: desc
+date: 2023-05-17
+tags:
+  - downtime
 ---
+
+
+Набор правил для обработки любых действий, связанных с простоем, которые выполняются в течение длительного периода времени.
+
 
 ### Основные понятия
 
@@ -142,5 +141,4 @@ tags:
 **Постоянные магические предметы.** Создание магических предметов, таких как волшебное оружие или кольца, — сложный процесс, требующий не только времени и материалов. Эти предметы требуют сочетания навыков как в ремесле, так и в магии. Один персонаж, владеющий соответствующим инструментом и владеющий Магией, может выполнить задачу самостоятельно, но чаще заклинатель и ремесленник работают вместе над созданием предмета, каждый из которых вносит свою половину необходимых знаний. За каждый интервал времени выполняются две проверки: одна с помощью инструмента, а другая с помощью Магии. Используйте меньший из двух результатов, чтобы определить достигнутый прогресс.
 
 Создание постоянного магического предмета всегда имеет грандиозный (для второстепенных предметов) или обширный (для основных предметов) масштаб или даже больше, в зависимости от уровня мощности предмета. КС также определяется Мастер. КС, указанные для расходных предметов, являются хорошим ориентиром.
-
 Создание магических предметов обычно представляет собой весьма экспериментальный процесс. Мастер является окончательным авторитетом в отношении того, каковы эффекты готового предмета. Чтобы воспроизвести известный предмет, необходимо приобрести рецепт вместе с определенными редкими ингредиентами.
